website/versioned_docs/version-2.1.0/tests/maester/MT.1072.md
---
title: "MT.1072 - Conditional access policies should not use the deprecated Approved Client App grant."
description: "Checks if the tenant has no conditional access policy that requires an approved client app. The approved client app grant is retiring in early March 2026. Organizations must transition all current Conditional Access policies that use only the Require Approved Client App grant control to Require App…"
slug: /tests/MT.1072
className: generated-test-doc
sidebar_class_name: hidden
hide_table_of_contents: true
keywords:
  - "Maester"
  - "Microsoft 365 security"
  - "MT.1072"
  - "High"
  - "CA"
---

<!-- This file is generated by website/scripts/generate-test-docs.mjs. Do not edit manually. -->

# MT.1072 - Conditional access policies should not use the deprecated Approved Client App grant.

## Overview

Checks if the tenant has no conditional access policy that requires an approved client app.

The approved client app grant is retiring in early March 2026. Organizations must transition all current Conditional Access policies that use only the Require Approved Client App grant control to Require Approved Client App or Application Protection Policy by March 2026. Additionally, for any new Conditional Access policy, only apply the Require application protection policy grant.

After March 2026, Microsoft will stop enforcing require approved client app control, and it will be as if this grant isn't selected. Use the following steps before March 2026 to protect your organization’s data.

## Learn more
- [Migrate approved client app to application protection policy in Conditional Access](https://learn.microsoft.com/en-us/entra/identity/conditional-access/migrate-approved-client-app)

## Test Metadata

| Field | Value |
| --- | --- |
| Test ID | MT.1072 |
| Severity | High |
| Suite | Maester |
| Category | CA |
| PowerShell test | [Test-MtCaApprovedClientApp](/docs/commands/Test-MtCaApprovedClientApp) |
| Tags | CA, Maester, MT.1072 |

## Source

- Pester test: `tests/Maester/Entra/Test-ConditionalAccessBaseline.Tests.ps1`
- PowerShell source: `powershell/public/maester/entra/Test-MtCaApprovedClientApp.ps1`
